rabbit MQ added to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8081
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=MicroServicesDemo
+spring.data.mongodb.database=vendor
+spring.data.mongodb.uri=mongodb+srv://referral-work:rock-fever@cluster0.gjlki.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
